// 모델 정의
struct Item {
    let text: String
}
