import UIKit

// 뷰 정의
class MyTableViewCell: UITableViewCell {
    func setText(_ text: String) {
        textLabel?.text = text
    }
}
