@startuml

package Model <<database>> {
    entity Item
    class DataSource
}

package View <<rectangle>> {
    class MyTableView
    class MyTableViewCell
}

package Controller <<rectangle>> {
    class ViewController
}

Item <-- DataSource
MyTableViewCell <.. DataSource

MyTableViewCell <.. MyTableView
DataSource <-- MyTableView

MyTableView <-- ViewController
DataSource <-- ViewController
Item <-- ViewController

@enduml
